--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     </li>
 </ul>
 <ul>
-    <li>Together with <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a> and <a href="https://liyueshen.engin.umich.edu/">Prof. Liyue Shen</a>, we present a tutorial on diffusion models at ICML 2025. Check out <a href="https://icml-2025-tutorial.github.io/diffusion-models/">our website</a>. <a href="slides/Diffusion_theory_ICML_Chen.pdf">[Slides of my part]</a> </li>
+    <li>Together with <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a> and <a href="https://liyueshen.engin.umich.edu/">Prof. Liyue Shen</a>, we present a tutorial on diffusion models at ICML 2025. Check out <a href="https://icml-2025-tutorial.github.io/diffusion-models/">our website</a>. See also <a href="slides/Diffusion_theory_ICML_Chen.pdf">[slides of my part]</a> </li>
 </ul>
 <ul>
     <li><a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf"> Our paper</a> on implicit regularization in nonconvex statistical estimation
@@ -247,7 +247,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-14 08:57:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-14 09:02:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
