--- a/Group.html
+++ b/Group.html
@@ -111,7 +111,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-14 17:45:51 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-20 13:31:30 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
