--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-14 17:45:51 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-20 13:31:30 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
