--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p><b>Reinforcement learning</b>
 </p>
 <ul>
-<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (appeared in part in COLT 2024). <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> <i>Journal of the ACM</i>, vol. 72, no. 3, pp. 1-63, 2025 (appeared in part in COLT 2024). <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="https://dl.acm.org/doi/10.1145/3733592">[JACM version]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 
 
 </p>
@@ -247,7 +247,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-20 13:31:30 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-21 10:02:10 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
