--- a/Publications_year.html
+++ b/Publications_year.html
@@ -95,7 +95,7 @@ G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, International Conf
 <h2>2023</h2>
 <ol>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
-Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, accepted to <i>Journal of the ACM</i>, 2025+. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <i>Journal of the ACM</i>, vol. 72, no. 3, pp. 1-63, 2025. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="https://dl.acm.org/doi/10.1145/3733592">[JACM version]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in COLT 2024
 </p>
 </li>
@@ -361,7 +361,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-20 13:31:31 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-21 10:02:11 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
