--- a/Publications_year.html
+++ b/Publications_year.html
@@ -100,7 +100,7 @@ Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <i>Journal of the ACM</i>, vol. 
 </p>
 </li>
 <li><p><b>Optimal Multi-Distribution Learning</b> <br />
-Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publications/MDL.pdf">[paper]</a><a href="slides/MDL_slides.pdf">[slides]</a>
+Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, accepted to <i>Journal of the ACM</i>, 2025+. <a href="publications/MDL.pdf">[paper]</a><a href="slides/MDL_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in COLT 2024
 </p>
 </li>
@@ -361,7 +361,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-21 10:02:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-27 22:15:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
