--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> COLT 2025. 
 </p>
 </li>
-<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -247,7 +247,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-21 10:02:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-27 22:15:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
