--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li>Together with <a href="https://yuejiechi.github.io/">Prof. Yuejie Chi</a> and <a href="https://yutingwei.github.io/">Prof. Yuting Wei</a>, we will present a tutorial on reinforcement learning at the <a href="https://meetings.informs.org/wordpress/annual/tutorials/">2025 INFORMS Annual Meetings</a>.  
+    <li>Together with <a href="https://yuejiechi.github.io/">Prof. Yuejie Chi</a> and <a href="https://yutingwei.github.io/">Prof. Yuting Wei</a>, we will present a tutorial on reinforcement learning at the <a href="https://meetings.informs.org/wordpress/annual/tutorials/">2025 INFORMS Annual Meetings.</a> See the <a href="https://arxiv.org/pdf/2507.14444">reading material</a>.  
     </li>
 </ul>
 <ul>
@@ -247,7 +247,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-27 22:15:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-29 22:57:36 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
