--- a/Group.html
+++ b/Group.html
@@ -45,8 +45,7 @@
 </li>
 <li><p><a href="https://jianhaoma.github.io/">Jianhao Ma</a> (Postdoc, incoming faculty, Tsinghua University)</p>
 </li>
-<li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)
-</p>
+<li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://yuepengyang.github.io/">Yuepeng Yang</a> (Postdoc, co-advised with Yuejie Chi)</p>
 </li>
@@ -55,55 +54,58 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Faculty, 
+<li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc &ndash;&gt; Faculty, 
 
 University of Illinois Urbana-Champaign)
 </p>
 </li>
-<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Faculty, 
+<li><p><a href="https://cxcai.github.io/">Changxiao Cai</a> (Ph.D. &ndash;&gt;  Faculty, 
 
 University of Michigan-Ann Arbor)
 </p>
 </li>
 <li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
 </li>
-<li><p><a href="https://sds.wustl.edu/people/hong-hu">Hong Hu</a> (Faculty, 
+<li><p><a href="https://sds.wustl.edu/people/hong-hu">Hong Hu</a> (Postdoc &ndash;&gt;  Faculty, 
 
 Washington University in St. Louis)
 </p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=oCcK0LoAAAAJ&amp;hl=en">Jack Ji</a> (First Job: Google DeepMind) 
+<li><p><a href="https://scholar.google.com/citations?user=oCcK0LoAAAAJ&amp;hl=en">Jack Ji</a> (Ph.D. &ndash;&gt;  First Job: Google DeepMind) 
 </p>
 </li>
-<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Faculty, 
+<li><p><a href="https://ligen12.github.io/">Gen Li</a> (Postdoc &ndash;&gt;  Faculty, 
 
 Chinese University of Hong Kong)
 </p>
 </li>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Faculty, 
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Ph.D. &ndash;&gt;  Faculty, 
 
 University of Chicago)
 </p>
 </li>
-<li><p><a href="https://yulingy.github.io/">Yuling Yan</a> (Faculty, 
+<li><p><a href="https://wuyc0114.github.io/">Yuchen Wu</a> (Department postdoc &ndash;&gt;  Faculty, Cornell)
+</p>
+</li>
+<li><p><a href="https://yulingy.github.io/">Yuling Yan</a> (Ph.D. &ndash;&gt;  Faculty, 
 
 University of Wisconsin–Madison)
 </p>
 </li>
-<li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Faculty, 
+<li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Postdoc &ndash;&gt;  Faculty, 
 
 Tsinghua University)
 </p>
 </li>
-<li><p><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/">Qian Yu</a> (Faculty, 
+<li><p><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/">Qian Yu</a> (Postdoc &ndash;&gt;  Faculty, 
 
 University of California, Santa Barbara) 
 </p>
 </li>
-<li><p><a href="https://zsubfuncz.github.io/zihanzhang.github.io/">Zihan Zhang</a> (Faculty, HKUST)
+<li><p><a href="https://zsubfuncz.github.io/zihanzhang.github.io/">Zihan Zhang</a> (Postdoc &ndash;&gt;  Faculty, HKUST)
 </p>
 </li>
-<li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Faculty, 
+<li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc &ndash;&gt;  Faculty, 
 
 University of Illinois Urbana-Champaign)
 </p>
@@ -111,7 +113,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-29 22:57:36 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-15 15:10:29 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
