--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li>Together with <a href="https://yuejiechi.github.io/">Prof. Yuejie Chi</a> and <a href="https://yutingwei.github.io/">Prof. Yuting Wei</a>, we will present a tutorial on reinforcement learning at the <a href="https://meetings.informs.org/wordpress/annual/tutorials/">2025 INFORMS Annual Meetings.</a> See the <a href="https://arxiv.org/pdf/2507.14444">reading material</a>.  
-    </li>
+    <li>Together with <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a> and <a href="https://liyueshen.engin.umich.edu/">Prof. Liyue Shen</a>, we presented a tutorial on diffusion models at ICML 2025. Check out <a href="https://icml-2025-tutorial.github.io/diffusion-models/">our website</a>. See also <a href="slides/Diffusion_theory_ICML_Chen.pdf">[slides of my part].</a> </li>
 </ul>
 <ul>
-    <li>Together with <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a> and <a href="https://liyueshen.engin.umich.edu/">Prof. Liyue Shen</a>, we presented a tutorial on diffusion models at ICML 2025. Check out <a href="https://icml-2025-tutorial.github.io/diffusion-models/">our website</a>. See also <a href="slides/Diffusion_theory_ICML_Chen.pdf">[slides of my part]</a> </li>
+    <li>Together with <a href="https://yuejiechi.github.io/">Prof. Yuejie Chi</a> and <a href="https://yutingwei.github.io/">Prof. Yuting Wei</a>, we will present a tutorial on reinforcement learning at the <a href="https://meetings.informs.org/wordpress/annual/tutorials/">2025 INFORMS Annual Meetings.</a> See the <a href="https://arxiv.org/pdf/2507.14444">reading material</a>.  
+    </li>
 </ul>
 <ul>
     <li><a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf"> Our paper</a> on implicit regularization in nonconvex statistical estimation
@@ -228,7 +228,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-18 16:21:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-18 16:22:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
