--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
-<li><p><b>In-context learning</b>
+<li><p><b>Transformer theory</b>
 </p>
 <ul>
 <li><p>G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/TransformerICL.pdf">&ldquo;Transformers meet in-context learning: A universal approximation theory,&rdquo;</a> 2025 (*=equal contributions). <a href="slides/Transformer_ICL_slides.pdf">[slides]</a> </p>
@@ -125,12 +125,11 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </li>
 </ul>
 <ul>
-<li><p><b>Optimization and statistical learning</b>
+<li><p><b>Statistical learning</b>
+
+
 </p>
 <ul>
-<li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> COLT 2025. 
-</p>
-</li>
 <li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
 </li>
 </ul>
@@ -228,7 +227,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-18 16:22:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-24 13:29:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
