--- a/Group.html
+++ b/Group.html
@@ -64,7 +64,7 @@ University of Illinois Urbana-Champaign)
 University of Michigan-Ann Arbor)
 </p>
 </li>
-<li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
+<li><p>Yanxi Chen (Ph.D. &ndash;&gt;  First Job: Alibaba DAMO Academy) </p>
 </li>
 <li><p><a href="https://sds.wustl.edu/people/hong-hu">Hong Hu</a> (Postdoc &ndash;&gt;  Faculty, 
 
@@ -113,7 +113,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 13:29:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-04 23:52:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
