--- a/Workshops.html
+++ b/Workshops.html
@@ -44,7 +44,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 13:29:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-04 23:52:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
