--- a/Education.html
+++ b/Education.html
@@ -110,7 +110,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 13:29:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-04 23:52:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
