--- a/Publications_year.html
+++ b/Publications_year.html
@@ -365,7 +365,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 13:29:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-04 23:52:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
