--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-24 13:29:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-04 23:52:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
