--- a/Publications_year.html
+++ b/Publications_year.html
@@ -57,6 +57,10 @@ INFORMS TutORial</i>, 2025. <a href="https://arxiv.org/pdf/2507.14444">[Arxiv]</
 
 <h2>2025</h2>
 <ol>
+<li><p><b>Connections Between Reinforcement Learning with Feedback, Test-time Scaling, and Diffusion Guidance: An Anthology</b> <br />
+Y. Jiao, <u>Y. Chen</u>, G. Li, 2025. <a href="https://arxiv.org/abs/2509.04372">[paper]</a> 
+</p>
+</li>
 <li><p><b>Faster Diffusion Models via Higher-Order Approximation</b> <br />
 G. Li*, Y. Zhou*, Y. Wei, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/Diffusion_HighOrder.pdf">[paper]</a>
 </p>
@@ -365,7 +369,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-04 23:52:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-05 14:19:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
