--- a/Publications_year.html
+++ b/Publications_year.html
@@ -108,7 +108,7 @@ Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <i>Journal of the ACM</i>, vol. 
 </p>
 </li>
 <li><p><b>Optimal Multi-Distribution Learning</b> <br />
-Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, accepted to <i>Journal of the ACM</i>, 2025+. <a href="publications/MDL.pdf">[paper]</a><a href="slides/MDL_slides.pdf">[slides]</a>
+Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, <i>Journal of the ACM</i>, vol. 72, no. 5, pp. 1-71, 2025. <a href="publications/MDL.pdf">[paper]</a><a href="slides/MDL_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in COLT 2024
 </p>
 </li>
@@ -369,7 +369,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-05 14:19:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-20 11:01:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
