--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 
 </p>
 <ul>
-<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a>  <i>Journal of the ACM</i>, vol. 72, no. 5, pp. 1-71, 2025 (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -227,7 +227,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-05 14:19:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-20 11:01:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
