--- a/Publications_year.html
+++ b/Publications_year.html
@@ -41,7 +41,7 @@
 <td align="left"><p>
 <ol>
 <li><p><b>Statistical and Algorithmic Foundations of Reinforcement Learning</b> <br />   Y. Chi, <u>Y. Chen</u>, Y. Wei, <i>
-INFORMS TutORial</i>, 2025. <a href="https://arxiv.org/pdf/2507.14444">[Arxiv]</a> 
+INFORMS TutORials in Operations Research</i>, pp. 104-144, 2025. <a href="https://arxiv.org/pdf/2507.14444">[Arxiv]</a> 
 </p>
 </li>
 <li><p><b>Spectral Methods for Data Science: A Statistical Perspective</b> <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Foundations and Trends in Machine Learning</i>, vol. 14, no. 5, pp. 566–806, 2021. <a href="publications/SpectralMethods.pdf">[Arxiv]</a><a href="https://www.nowpublishers.com/article/Details/MAL-079">[FnT link]</a><a href="slides/spectral_method_slides.pdf">[Slides for PKU short course]</a> 
@@ -369,7 +369,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-20 11:01:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-29 12:24:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
