--- a/Publications_year.html
+++ b/Publications_year.html
@@ -57,6 +57,10 @@ INFORMS TutORials in Operations Research</i>, pp. 104-144, 2025. <a href="https:
 
 <h2>2025</h2>
 <ol>
+<li><p><b>Transformers Provably Learn Chain-of-Thought Reasoning with Length Generalization</b> <br />
+Y. Huang*, Z. Wen, A. Singh, Y. Chi, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/transformers_CoT.pdf">[paper]</a> 
+</p>
+</li>
 <li><p><b>Connections Between Reinforcement Learning with Feedback, Test-time Scaling, and Diffusion Guidance: An Anthology</b> <br />
 Y. Jiao, <u>Y. Chen</u>, G. Li, 2025. <a href="https://arxiv.org/abs/2509.04372">[paper]</a> 
 </p>
@@ -369,7 +373,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-29 12:24:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-11 09:32:51 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
