--- a/Software.html
+++ b/Software.html
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-29 12:24:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-11 09:32:51 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
