--- a/Workshops.html
+++ b/Workshops.html
@@ -44,7 +44,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-29 12:24:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-11 09:32:51 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
