--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Transformer theory</b>
 </p>
 <ul>
+<li><p>Y. Huang*, Z. Wen, A. Singh, Y. Chi, <u>Y. Chen</u>, <a href="publications/transformers_CoT.pdf">&ldquo;Transformers provably learn chain-of-thought reasoning with length generalization,&rdquo;</a> 2025 (*=equal contributions).
+</p>
+</li>
 <li><p>G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/TransformerICL.pdf">&ldquo;Transformers meet in-context learning: A universal approximation theory,&rdquo;</a> 2025 (*=equal contributions). <a href="slides/Transformer_ICL_slides.pdf">[slides]</a> </p>
 </li>
 </ul>
@@ -227,7 +230,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-29 12:24:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-11 09:32:50 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
