--- a/Publications_year.html
+++ b/Publications_year.html
@@ -373,7 +373,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-11 09:32:51 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-03 00:33:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
