--- a/Teaching.html
+++ b/Teaching.html
@@ -87,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-11 09:32:50 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-03 00:33:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
