--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-11 09:32:50 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-03 00:33:27 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
