--- a/Publications_year.html
+++ b/Publications_year.html
@@ -66,7 +66,7 @@ G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, 2025 (*=equal contributions)
 </p>
 </li>
 <li><p><b>Towards a Unified Framework for Guided Diffusion models</b> <br />
-Y. Jiao, <u>Y. Chen</u>, G. Li, 2025. (*=equal contributions). <a href="publications/guidance_framework.pdf">[paper]</a>
+Y. Jiao, <u>Y. Chen</u>, G. Li, 2025. <a href="publications/guidance_framework.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Connections Between Reinforcement Learning with Feedback, Test-time Scaling, and Diffusion Guidance: An Anthology</b> <br />
@@ -377,7 +377,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-04 10:38:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-04 10:48:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
