--- a/Group.html
+++ b/Group.html
@@ -49,8 +49,6 @@
 </li>
 <li><p><a href="https://yuepengyang.github.io/">Yuepeng Yang</a> (Postdoc, co-advised with Yuejie Chi)</p>
 </li>
-<li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
-</li>
 </ul>
 <h2>Alumni </h2>
 <ul>
@@ -102,6 +100,9 @@ Tsinghua University)
 University of California, Santa Barbara) 
 </p>
 </li>
+<li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (Ph.D. &ndash;&gt;  First Job: Mosaic AI, Databricks)
+</p>
+</li>
 <li><p><a href="https://zsubfuncz.github.io/zihanzhang.github.io/">Zihan Zhang</a> (Postdoc &ndash;&gt;  Faculty, HKUST)
 </p>
 </li>
@@ -113,7 +114,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-09 13:21:09 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-08 14:01:34 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
