--- a/Publications_year.html
+++ b/Publications_year.html
@@ -55,6 +55,12 @@ INFORMS TutORials in Operations Research</i>, pp. 104-144, 2025. <a href="https:
 </p>
 </td></tr></table>
 
+<h2>2026</h2>
+<ol>
+<li><p><b>Preconditioning Benefits of Spectral Orthogonalization in Muon</b> <br />
+J. Ma, Y. Huang, Y. Chi, <u>Y. Chen</u>, 2026. <a href="publications/precondition_muon.pdf">[paper]</a></p>
+</li>
+</ol>
 <h2>2025</h2>
 <ol>
 <li><p><b>Transformers Provably Learn Chain-of-Thought Reasoning with Length Generalization</b> <br />
@@ -377,7 +383,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-19 14:33:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-19 14:46:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
