--- a/Publications_year.html
+++ b/Publications_year.html
@@ -95,7 +95,7 @@ Z. Zhang,  J. D. Lee, S. S. Du, <u>Y. Chen</u>, <i>Conference on Learning Theory
 </p>
 </li>
 <li><p><b>Denoising Diffusion Probabilistic Models Are Optimally Adaptive to Unknown Low Dimensionality</b> <br />
-Z. Huang, Y. Wei, <u>Y. Chen</u>, 2024. <a href="publications/DDPM-low-dim.pdf">[paper]</a>
+Z. Huang, Y. Wei, <u>Y. Chen</u>, <i>Mathematics of Operations Research</i>, 2026+. <a href="publications/DDPM-low-dim.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Stochastic Runge-Kutta Methods: Provable Acceleration of Diffusion Models</b> <br />
@@ -383,7 +383,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-19 14:46:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-10 10:56:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
