--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 in total variation,&rdquo;</a> 2025 (accepted in part to COLT 2025).  <a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>Z. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/DDPM-low-dim.pdf">&ldquo;Denoising diffusion probabilistic models are optimally adaptive to unknown low dimensionality,&rdquo;</a> 2024.
+<li><p>Z. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/DDPM-low-dim.pdf">&ldquo;Denoising diffusion probabilistic models are optimally adaptive to unknown low dimensionality,&rdquo;</a> <i>Mathematics of Operations Research</i>, 2025+.
 </p>
 </li>
 <li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/DiffusionODE.pdf">&ldquo;A sharp convergence theory for
@@ -230,7 +230,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-01-19 14:46:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-10 10:56:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
