--- a/Publications_year.html
+++ b/Publications_year.html
@@ -57,6 +57,14 @@ INFORMS TutORials in Operations Research</i>, pp. 104-144, 2025. <a href="https:
 
 <h2>2026</h2>
 <ol>
+<li><p><b>Optimal Training-Conditional Regret for Online Conformal Prediction</b> <br />
+J. Liang, Z. Ren, <u>Y. Chen</u>, 2026. <a href="publications/driftOCP.pdf">[paper]</a>
+</p>
+</li>
+<li><p><b>On the Learning Dynamics of RLVR at the Edge of Competence</b> <br />
+Y. Huang, Z. Wen, Y. Chi, Y. Wei, A. Singh, Y. Liang,  <u>Y. Chen</u>, 2026. <a href="https://arxiv.org/abs/2602.14872">[paper]</a>
+</p>
+</li>
 <li><p><b>Preconditioning Benefits of Spectral Orthogonalization in Muon</b> <br />
 J. Ma, Y. Huang, Y. Chi, <u>Y. Chen</u>, 2026. <a href="publications/precondition_muon.pdf">[paper]</a></p>
 </li>
@@ -383,7 +391,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-10 10:56:46 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-18 00:15:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
