--- a/Publications_year.html
+++ b/Publications_year.html
@@ -72,7 +72,7 @@ J. Ma, Y. Huang, Y. Chi, <u>Y. Chen</u>, 2026. <a href="publications/preconditio
 <h2>2025</h2>
 <ol>
 <li><p><b>Transformers Provably Learn Chain-of-Thought Reasoning with Length Generalization</b> <br />
-Y. Huang*, Z. Wen, A. Singh, Y. Chi, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/transformers_CoT.pdf">[paper]</a> 
+Y. Huang*, Z. Wen, A. Singh, Y. Chi, <u>Y. Chen</u>, <i>Neural Information Processing Systems (NeurIPS)</i>, 2025 (*=equal contributions). <a href="publications/transformers_CoT.pdf">[paper]</a> 
 </p>
 </li>
 <li><p><b>Transformers Meet In-Context Learning: A Universal Approximation Theory</b> <br />
@@ -391,7 +391,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-18 00:15:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-18 00:38:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
