--- a/Group.html
+++ b/Group.html
@@ -43,7 +43,8 @@
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Chris Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)</p>
 </li>
-<li><p><a href="https://jianhaoma.github.io/">Jianhao Ma</a> (Postdoc, incoming faculty, Tsinghua University)</p>
+<li><p><a href="https://jianhaoma.github.io/">Jianhao Ma</a> (Postdoc)
+</p>
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -114,7 +115,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-18 00:46:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-19 14:08:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
