--- a/Group.html
+++ b/Group.html
@@ -88,7 +88,7 @@ University of Chicago)
 </li>
 <li><p><a href="https://yulingy.github.io/">Yuling Yan</a> (Ph.D. &ndash;&gt;  Faculty, 
 
-University of Wisconsin–Madison)
+University of Wisconsin–Madison &ndash;&gt; D. E. Shaw)
 </p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Postdoc &ndash;&gt;  Faculty, 
@@ -115,7 +115,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-19 14:35:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-24 16:07:50 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
