--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <ul>
 <li><p><b>Nonconvex statistical estimation</b>
-
-
+</p>
+<ul>
+<li><p><u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <a href="publications/RPCA_noise.pdf">&ldquo;Bridging convex and nonconvex optimization in robust PCA: Noise, outliers, and missing data,&rdquo;</a> <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[ArXiv]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
 
 
 
@@ -190,7 +191,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 
 
 </p>
-<ul>
+</li>
 <li><p>C. Ma, K. Wang, Y. Chi, <u>Y. Chen</u>, <a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf">&ldquo;Implicit regularization in nonconvex statistical estimation: Gradient descent converges linearly for phase retrieval, matrix completion, and blind deconvolution,&rdquo;</a> <i>Foundations of Computational Mathematics</i>, vol. 20, no. 3, pp. 451-632, June 2020 
 <b>(SIAM Activity Group on Imaging Science Best Paper Prize)</b>.  <a href="publications/ImplicitReg_main.pdf">[main text]</a><a href="publications/ImplicitReg_supp.pdf">[supplement]</a><a href="publications/ImplicitReg.pdf">[full paper (Arxiv)]</a><a href="slides/implicit_reg_slides.pdf">[slides]</a>
 </p>
@@ -211,7 +212,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-19 14:35:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-24 16:07:49 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
