--- a/Software.html
+++ b/Software.html
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-19 14:35:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-24 16:07:50 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
