--- a/Publications_year.html
+++ b/Publications_year.html
@@ -62,7 +62,7 @@ J. Liang, Z. Ren, <u>Y. Chen</u>, 2026. <a href="publications/driftOCP.pdf">[pap
 </p>
 </li>
 <li><p><b>On the Learning Dynamics of RLVR at the Edge of Competence</b> <br />
-Y. Huang, Z. Wen, Y. Chi, Y. Wei, A. Singh, Y. Liang,  <u>Y. Chen</u>, 2026. <a href="https://arxiv.org/abs/2602.14872">[paper]</a>
+Y. Huang*, Z. Wen*, Y. Chi, Y. Wei, A. Singh, Y. Liang,  <u>Y. Chen</u>, 2026 (*=equal contributions). <a href="https://arxiv.org/abs/2602.14872">[paper]</a>
 </p>
 </li>
 <li><p><b>Preconditioning Benefits of Spectral Orthogonalization in Muon</b> <br />
@@ -72,7 +72,7 @@ J. Ma, Y. Huang, Y. Chi, <u>Y. Chen</u>, 2026. <a href="publications/preconditio
 <h2>2025</h2>
 <ol>
 <li><p><b>Transformers Provably Learn Chain-of-Thought Reasoning with Length Generalization</b> <br />
-Y. Huang*, Z. Wen, A. Singh, Y. Chi, <u>Y. Chen</u>, <i>Neural Information Processing Systems (NeurIPS)</i>, 2025 (*=equal contributions). <a href="publications/transformers_CoT.pdf">[paper]</a> 
+Y. Huang*, Z. Wen*, A. Singh, Y. Chi, <u>Y. Chen</u>, <i>Neural Information Processing Systems (NeurIPS)</i>, 2025 (*=equal contributions). <a href="publications/transformers_CoT.pdf">[paper]</a> 
 </p>
 </li>
 <li><p><b>Transformers Meet In-Context Learning: A Universal Approximation Theory</b> <br />
@@ -391,7 +391,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2026-02-24 16:07:50 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-02-24 17:40:43 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
